<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorBg"
    android:layout_height="match_parent">


        <Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="0dp"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_profile"
                android:gravity="center"
                android:layout_gravity="center"
                android:fontFamily="@font/source_sans_pro_bold"
                android:textColor="@color/colorBlack"
                android:letterSpacing="0.1"
                android:textSize="22sp"/>

        </Toolbar>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/pullToRefresh"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tool_bar"
    app:layout_constraintBottom_toBottomOf="parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dataView"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView"/>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/iv_avatar"
                app:layout_constraintTop_toTopOf="@+id/iv_avatar"
                app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:gravity="start"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:gravity="start"
                    android:layout_gravity="center"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:textColor="@color/colorBlack"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:letterSpacing="0.08"
                    android:textSize="35sp"/>

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_gravity="center"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:textColor="@color/colorBlack"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textSize="18sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
                android:layout_gravity="center"
                android:fontFamily="@font/source_sans_pro_semi_bold"
                android:textColor="@color/colorBlack"
                android:singleLine="true"
                android:ellipsize="end"
                android:letterSpacing="0.05"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email"
                android:layout_gravity="center"
                android:fontFamily="@font/source_sans_pro_regular"
                android:textColor="@color/colorBlack"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_followings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toEndOf="@+id/tv_followers"
                app:layout_constraintTop_toBottomOf="@+id/tv_email"
                android:layout_gravity="center"
                android:fontFamily="@font/source_sans_pro_regular"
                android:textColor="@color/colorBlack"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_pinned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_pinned"
                android:gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_followings"
                android:layout_gravity="center"
                android:letterSpacing="0.1"
                android:fontFamily="@font/source_sans_pro_bold"
                android:textColor="@color/colorBlack"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/tv_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_view_all"
                android:gravity="start"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/tv_pinned"
                android:layout_gravity="center"
                android:fontFamily="@font/source_sans_pro_semi_bold"
                android:textColor="@color/colorBlack"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="17sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_pinned_repos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_pinned"/>

            <TextView
                android:id="@+id/tv_top_repo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_top_repositories"
                android:gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_pinned_repos"
                android:layout_gravity="center"
                android:letterSpacing="0.1"
                android:fontFamily="@font/source_sans_pro_bold"
                android:textColor="@color/colorBlack"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/tv_top_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_view_all"
                android:gravity="start"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/tv_top_repo"
                android:layout_gravity="center"
                android:fontFamily="@font/source_sans_pro_semi_bold"
                android:textColor="@color/colorBlack"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="17sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top_repos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_top_repo"/>

            <TextView
                android:id="@+id/tv_starred_repo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_starred_repositories"
                android:gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_top_repos"
                android:layout_gravity="center"
                android:letterSpacing="0.1"
                android:fontFamily="@font/source_sans_pro_bold"
                android:textColor="@color/colorBlack"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/tv_starred_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_view_all"
                android:gravity="start"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/tv_starred_repo"
                android:layout_gravity="center"
                android:fontFamily="@font/source_sans_pro_semi_bold"
                android:textColor="@color/colorBlack"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="17sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_starred_repos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_starred_repo"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <ProgressBar
        android:id="@+id/pbLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"
        tools:visibility="visible" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>